--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>React 2025 v19.1.0</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root"><!--ssr-outlet--></div>
     <script type="module" src="/src/entry-client.tsx"></script>
   </body>
 </html>
